--- a/style/index.css
+++ b/style/index.css
@@ -9,6 +9,9 @@
     padding: 0px;
     margin: 0px;
 }
+        
+
+
 
 /* inicio css header nav */
 header{
@@ -19,7 +22,7 @@ header{
 
 #logo{
     width: 100%;
-    padding-top: 30px;
+    padding-top: 10px;
     height: 105px;
     
 }
@@ -48,7 +51,7 @@ nav ul li{
 }
 
 nav a {
-    text-decoration: none;
+    text-decoration: none !important;
     color: #fff;
     font-size: 23px;
     text-transform: uppercase;
@@ -85,6 +88,7 @@ nav a:hover{
     width: 100%;
     background-color: #131212;
     overflow: hidden;
+    font-family: "Montserrat', sans-serif";
     
 }
 
@@ -93,8 +97,8 @@ nav a:hover{
     margin: auto; 
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 10px 0px;
-    padding: 10px 10px;
+    grid-gap: 10px;
+    padding: 5px 10px;
     
 }
 
@@ -107,7 +111,9 @@ nav a:hover{
 .foot .cajaDatos .cajaDatos1 .datos{
     display: flex;
     flex-flow: wrap row;
-    justify-content: left;
+    justify-content: space-between;
+    width: 70%;
+    margin-top: -16px;
     
 }
 
@@ -120,7 +126,7 @@ nav a:hover{
 .cajaDatos .cajaDatos1 p a{
     text-decoration: none;
     color: #fff;
-    margin-right: 15px;
+    margin-right: 0px;
     
 
     
@@ -128,16 +134,19 @@ nav a:hover{
 
 .foot .cajaDatos .cajaCopy{
     text-align: center;
-    padding: 15px 0px;
     color: #fff;
     grid-column: 2/3;
     font-size: 17px;
+    margin-bottom: -15px;
+    
     
 }
 
 
 .nombre{
     color: #fff;
+    
+    
 }
 
 
@@ -230,7 +239,8 @@ nav a:hover{
         background-color: rgba(12, 12, 12, 0.7);
         color: white;
         text-shadow: 0px 0px 0px white;
-        
+        border: 1px solid #343a40;
+    
     }
 
     ul li a:hover{
@@ -262,6 +272,9 @@ nav a:hover{
         padding-top: 5px;
         display: flex;
         flex-flow: wrap column;
+        align-items: center;
+        width: 100%;
+        
         
     }
 
@@ -286,6 +299,8 @@ nav a:hover{
 @media only screen and (max-width: 480px){
 
 
+
+
 #logo{
     padding-top: 50px;
     height: 85px;
@@ -293,8 +308,19 @@ nav a:hover{
     
 }
 
+nav{
+    margin-top: 50px;
+    
+}
+
 nav ul li a{
     font-size: 20px;
+    
+    
+}
+
+.foot .cajaDatos .cajaDatos1{
+    align-self: center;
 }
 
 }
