--- a/style/sobre_mi.css
+++ b/style/sobre_mi.css
@@ -396,6 +396,9 @@ header a{
 }
 
 .nav-link{
+    text-transform: uppercase;
+    font-family: "Montserrat', sans-serif";
+    text-shadow: 1px 2px 2px grey;
     color: #fff !important;
     font-size: 20px;
 }
