--- a/style/sobre_mi.css
+++ b/style/sobre_mi.css
@@ -184,7 +184,7 @@ nav a:hover{
 
 
 
-@media only screen and (min-width: 1025px){
+@media only screen and (min-width: 1020px){
 
 /* inicio media query main */
 
@@ -194,19 +194,27 @@ nav a:hover{
     
     }
 
-
-
-    .mainSobreMi .fotoMia{
+    .fotoMia{
         display: flex;
-        flex-wrap: wrap;
         justify-content: center;
     }
     
 
     .mainSobreMi p{
-        padding: 160px 50px 0px 0px;
+        width: 90%;
+        padding: 0px 0px 0px 0px !important;
+        margin: 0px 0px 0px 0px !important;
+        font-size: 25px;
         text-align: center;
+        align-items: center;
+        
     }
+
+    .texto1{
+        display: flex;
+        align-items: center;
+    }
+
 
 /* fin media query main */
 
@@ -244,7 +252,7 @@ nav a:hover{
 
 
 
-@media only screen and (max-width: 770px){
+@media only screen and (max-width: 930px){
 
 
 /* inicio media query header */
@@ -277,7 +285,7 @@ nav ul{
 .mainSobreMi{
     display: grid;
     grid-template-rows: repeat(2, 1fr);
-    height: 175vh;
+    height: auto;
     
 }
 
@@ -358,7 +366,7 @@ nav ul{
 
 }
 
-@media only screen and (max-width: 480px){
+@media only screen and (max-width: 485px){
 
 /* inicio media query header */
 
@@ -410,18 +418,19 @@ header a{
     .mainSobreMi{
         display: grid;
         grid-template-rows: repeat(2, 1fr);
-        height: 240vh;
+        height: auto;
         
     }
 
     .cajaMain img{
-        width: 90%;
+        width: 100%;
+        padding: 10px;
         
         
     }
 
     .cajaMain p{
-        padding: 0px 50px 150px 50px;
+        padding: 0px;
         font-size: 15px;
     }
 
@@ -467,15 +476,25 @@ header a{
     }
 
 .mainSobreMi{
-    display: grid;
-    grid-template-rows: repeat(2, 1fr);
-    justify-content: center;
-    height: 250vh;
+    height: auto;
 }
 
+.texto1{
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    padding: 20px 0px 0px !important;
+    
+}
+
+main div p{
+    margin: 0px !important;
+    padding: 0px !important;
+}
 
 .mainSobreMi .fotoMia{
-    height: 85%;
+    
+    padding: 10px;
 }
 
 .cajaMain .texto1{
@@ -488,13 +507,37 @@ header a{
 @media only screen and (max-width: 321px){
 
 
+
 .mainSobreMi{
-    height: 300vh;
+    height: auto;
+    width: 100%;
+    
+}
+
+.texto1{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 10px 0px 0px;
+    
+    
 }
 
 .nav-link{
-    
     font-size: 18px;
 }
+.fotoMia{
+    margin: 0px !important;
+    padding-top: 10px;
+    
+}
+
+main div p{
+    margin: 0px 0px 0px 0px !important;
+    padding: 20px 0px 0px 0px !important;
+    width: 100%;
+    font-size: 0.90em !important;
+}
+
+
 
 }
