--- a/style/experiencia.css
+++ b/style/experiencia.css
@@ -14,7 +14,7 @@
 
 /* inicio css header nav */
 .headerOficial{
-    height: 150px;
+    height: 170px;
     width: 100%;
     background-color: #131212;
 
@@ -45,17 +45,22 @@ nav ul{
     
 }
 
+.navbar{
+    display: none;
+}
+
 nav ul li{
     list-style: none;
     margin-left: 30px;
     display: inline-block;
+    padding-top: 10px;
     
     
 
 }
 
 nav a {
-    text-decoration: none;
+    text-decoration: none !important;
     color: #fff;
     font-size: 23px;
     text-transform: uppercase;
@@ -148,6 +153,7 @@ h2{
     width: 100%;
     background-color: #131212;
     overflow: hidden;
+    font-family: "Montserrat', sans-serif";
 }
 
 .foot .cajaDatos{
@@ -170,6 +176,7 @@ h2{
     display: flex;
     flex-flow: wrap row;
     justify-content: left;
+    margin-top: -16px;
 }
 
 
@@ -191,6 +198,8 @@ h2{
     padding: 5px 0px;
     color: #fff;
     grid-column: 2/3;
+    font-size: 17px;
+    margin-bottom: -15px;
 }
 
 
@@ -215,10 +224,13 @@ h2{
         height: 110px;
         
 
-        
     }
 
 /* inicio media query header */
+
+.mainExperiencia{
+    height: auto;
+}
 
 #logo{
     height: 60%;
@@ -266,35 +278,37 @@ nav ul{
 
 
 
-@media only screen and (max-width: 770px){
+@media only screen and (max-width: 930px){
 
 
     /* inicio media query header */
     
     .headerOficial{
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
         height: auto;
-        height: 90px;
+        
     }
     
     #logo{
-        width: 50%;
-        height: 90%;
+        width: 100%;
+        padding-top: 15px;
+        padding-right: 30px;
     }
     
     nav ul{
         display: flex;
         flex-flow: wrap row;
-        
+        justify-content:space-evenly;
+        padding-top: 15px;
+        padding-right: 20px;
     }
-    
     /* fin media query header */
 
     /* inicio query main experiencia */
 
     .mainExperiencia{
-        height: 130vh;
+        height: auto;
         
     
     }
@@ -379,39 +393,47 @@ nav ul{
 
 
 
-@media only screen and (max-width: 480px){
+@media only screen and (max-width: 485px){
 
 /* inicio media query header */
+        
+html, body {
+    max-width: 100% !important;
+    overflow-x: hidden !important;
+}
+
         .headerOficial{
-            width: 100%;
-            display: flex;
-            flex-wrap: wrap column;
-            justify-content: flex-start;
-            height: 130px;
-            
-            
-            
+            display: block;
         }
-        
-        #logo{
-            width: 50%;
-            height: 60%;
-            padding-top: 10px;
-            
+
+        nav{
+            display: none;
         }
-        
-        nav ul{
-            display: flex;
-            flex-flow: wrap column;
-            padding-top: 5px;
-    
-        }
-    
+
         nav ul li a{
-            padding-top: 5px;
-            font-size: 15px;
+            display: none;
+        }
+
+        header a{
+            display: none;
+        }
+
+        .navbar{
+            display: flex;
             
+        }
+        
+        .navbar-toggler{
+            border: 0.4px solid white !important;
             
+        }
+        
+        .nav-link{
+            text-transform: uppercase;
+            font-family: "Montserrat', sans-serif";
+            text-shadow: 1px 2px 2px grey;
+            color: #fff !important;
+            font-size: 20px;
         }
 
 /* fin media query header */
@@ -419,7 +441,7 @@ nav ul{
 /* inicio query main */
 
     .mainExperiencia{
-        height: 230vh;
+        height: auto;
         display: flex;
         flex-wrap: wrap;
         
@@ -433,22 +455,21 @@ nav ul{
 
     .foto9{
         width: 100%;
-        height: 400px;
+        height: 500px;
         background-image: url(../media/img/IMG_72169.jpg);
         background-size: 350px 400px;
         background-repeat: no-repeat;
         
         
+        
     }
 
     .mainExperiencia p{
-        
-        font-size: 17px;
+        font-size: 15px;
     }
 
     .mainExperiencia h2{
         font-size: 26px;
-        text-decoration: underline;
         padding-top: 20px;
     }
 
@@ -497,10 +518,16 @@ nav ul{
 /* fin media query footer */
 }
 
-@media only screen and (max-width: 376px){
+@media only screen and (max-width: 380px){
+
+    .navbar{
+        display: flex;
+        
+    }
+
 
 .mainExperiencia{
-    height: 300vh;
+    height: auto;
 }
 
 
